--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
+    "body-parser": "^1.19.0",
     "consola": "^2.11.0",
+    "express": "^4.17.1",
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.12",
     "mongoose-auto-increment": "^5.0.1",
