chore: 增加热更新

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www"
+    "start": "node-dev ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.12",
     "mongoose-auto-increment": "^5.0.1",
+    "node-dev": "^4.0.0",
     "node-fetch": "^2.6.0",
     "yargs": "^15.0.2"
   }
